# tutorial-memory-refs-and-folder-structures

./: LICENSE  README.md
python/: environment.yml
python/buildable/number_returns/: README.md  pyproject.toml  setup.cfg
python/buildable/number_returns/number_returns_tests/ints/: test_gimmes.py
python/buildable/number_returns/number_returns_tests/strs/: test_gimme_strs.py
python/buildable/number_returns/src/number_returns/ints/: gimmes.py
python/buildable/number_returns/src/number_returns/strs/: gimme_strs.py
python/non_buildable/number_returns/tests/: test_gimme_strs.py
python/non_buildable_2/number_returns/number_returns/: gimme_strs.py
python/non_buildable_2/number_returns/tests/: __init__.py  test_gimmes.py
python/notebooks/: 01-references.ipynb  02-library-paths.ipynb  03-magic-or-dunder-methods.ipynb  04-importing-python-modules.ipynb  05-building-python-packages.ipynb
python/notebooks/pylibs/: infile_module.py
python/notebooks/pylibs/folder_with_magic/: __init__.py  file_with_magic.py
